--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -91,6 +91,9 @@ jobs:
       with:
         unity-version: ${{ matrix.unity-version }}
     - run: dir 'C:\Program Files\Unity\Editor\Data\Tools\RoslynScripts'
+      continue-on-error: true
+    - run: dir 'C:\Program Files\Unity\Editor\Data\Tools\Roslyn'
+      continue-on-error: true
 #     - run: get-content 'C:\Program Files\Unity\Editor\Data\Tools\RoslynScripts\unity_csc.bat'
     
   build-mac:
@@ -104,6 +107,7 @@ jobs:
         unity-version: ${{ matrix.unity-version }}
     - run: |
         ls -l /Applications/Unity/Unity.app/Contents/Tools/RoslynNet46
+        ls -l /Applications/Unity/Unity.app/Contents/Tools/Roslyn
         #cat /Applications/Unity/Unity.app/Contents/Tools/RoslynScripts/unity_csc
 
   build-ubuntu:
@@ -119,7 +123,9 @@ jobs:
     - uses: pCYSl5EDgo/setup-unity@master
       with:
         unity-version: ${{ matrix.unity-version }}
-    - run: ls -l /opt/Unity/Editor/Data/Tools/RoslynNet46
+    - run: |
+        ls -l /opt/Unity/Editor/Data/Tools/Roslyn
+        ls -l /opt/Unity/Editor/Data/Tools/RoslynNet46
 
 #     - run: echo -n $ULF aaa > Unity.ulf
 #       env:
